# Environment_Rendering

./: CMakeLists.txt  README.md  config.json  run.sh
src/: main.cpp
src/control/: control.cpp  control.h
src/envmap/: envmap.cpp  envmap.h
src/light/: light.cpp  light.h
src/shaders/: fragment_shader.fs  vertex_shader.vs
